--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "loguru>=0.7.3",
+    "pillow>=12.0.0",
+    "pyinstaller>=6.17.0",
+    "pystray>=0.19.5",
     "schedule>=1.2.2",
     "selenium>=4.38.0",
     "webdriver-manager>=4.0.2",
